[memcached-tools_1.0.0.1 2014-05-16 张春生]
1.新功能：增加WEIDAO_COVER_URL的查询，调整保存数据方法

[memcached-tools_1.0.0.1 2014-06-10 张春生]
1.新功能：修复自定义Key不能写入bug

[memcached-tools_1.0.0.1 2014-06-19 张春生]
1.新功能：增加memcached服务器
2.新功能：增加COUPON_IMEI_359439051076740的查询

[memcached-tools_1.0.0.1 2014-07-02 张春生]
1.新功能：增加YC_OAuth2_clients的查询

[memcached-tools_1.0.0.1 2014-07-02 张春生]
1.新功能：增加User_Collect_Driver_Count的查询
2.新功能：增加YC_Car_Type_Images的查询

[memcached-tools_1.0.0.1 2014-07-23 张春生]
1.新功能：增加YC_PRODUCT_VERSION_ALL的查询
2.新功能：增加ACTIVITY_PRICE_DURATION_10000001的查询
3.新功能：增加YC_DEVICE_DRIVER_CAR_COUNT_11_bj的查询

--备注分类
1、新功能：
2、Bug:
3、需求变更：
4、重构：
5、merge:

--格式：
[memcached-tools_1.0.0.1 2014-05-16 张春生]
版本号 日期 提交人
版本号：产品名 版本类型 主版本 辅版本 新功能版本 缺陷版本